# fastbit

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  libtool  ltmain.sh  runconfig
CVS/: Entries  Repository
contrib/: Makefile.am  Makefile.in  README
contrib/fbmerge/: Makefile.am  Makefile.in  fbmerge.cpp
doc/: contact.html  dataDistributions.html  dataLoading.html  footer.html  header.html  ibisCommandLine.html  index.html  indexSpec.html  quickstart.html  rara.html
doc/CVS/: Entries  Repository
examples/: Makefile.am  Makefile.in  ardea.cpp  ibis.cpp  rara.cpp  tcapi.c  thula.cpp  tiapi.c
examples/CVS/: Entries  Repository
java/: FastBit.c  FastBit.h  FastBit.java  Makefile.am  Makefile.in  README  README.txt  build.xml  milky.java
java/CVS/: Entries  Repository  Root
java/gov/lbl/fastbit/: FastBit.java  FastBitStringReader.java  FastBitStringWriter.java
java/tests/: TestFastBitJava.java
src/: Doxyfile  Makefile.am  Makefile.in  array_t.cpp  array_t.h  bitvector.cpp  bitvector.h  bitvector64.cpp  bitvector64.h  blob.cpp  blob.h  bord.cpp  bord.h  bordm.cpp  bundle.cpp  bundle.h  capi.cpp  capi.h  category.cpp  category.h  colValues.cpp  colValues.h  column.cpp  column.h  config.h.in  const.h  countQuery.cpp  countQuery.h  dictionary.cpp  dictionary.h  fastbit-0.7.pc.in  fastbit-config.h.in  fileManager.cpp  fileManager.h  filter.cpp  filter.h  fromClause.cpp  fromClause.h  fromLexer.cc  fromLexer.h  (+105 more)
src/CVS/: Entries  Repository
tests/: Makefile.am  Makefile.in  README  acmpub.v.b  hist0  hist1  hist2  hist3  hist4  inRange-1  inRange.cpp  jrf.cpp  js2.csv  marksdb-1  marksdb-3  marksdb.csv  maurel.csv  readcsv.cpp  setqgen.cpp  small-1  small-2  small-6  smatch.cpp  tcapi-3  test0.csv  test1.csv  text-0
tests/CVS/: Entries  Repository
tests/m4/: libtool.m4  ltversion.m4
tests/scripts/: fastbit-config.in  jrf-check.pl  matchCounts.pl  query-count.list  star2002.sh
tests/scripts/CVS/: Entries  Repository
tests/vault/: acmpub-0  hist0  hist1  hist2  hist5  hist6  inRange-1  join-6  join-8  marksdb-3  small-11  small-12  small-3  small-4  small-5  small-7  text-0  thula-0  thula-1
win/: MinGW.mak  README  Win.mak  ardea.vcproj  ardea.vcxproj  dll.vcproj  dll.vcxproj  fastbit.def  ibis.sln  ibis.vcproj  ibis.vcxproj  java.vcproj  java.vcxproj  rara.vcproj  rara.vcxproj  setqgen.vcproj  setqgen.vcxproj  static_pthread.patch  static_pthread_init.c  tcapi.vcproj  tcapi.vcxproj  thula.vcproj  thula.vcxproj  trydll.cpp  trydll.vcproj  trydll.vcxproj  xMinGW.mak
win/CVS/: Entries  Repository
